--- a/XD/package.json
+++ b/XD/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "multer": "^1.4.5",
+    "tesseract.js": "^4.0.2"
   }
 }
