Integrate frontend and backend for AI chat app
Added full-stack integration for Monolingo: implemented Flask backend with OpenAI GPT-4o-mini, created React frontend with chat UI, custom hooks, and API service. Added .env management, updated .gitignore, and provided setup/startup scripts and documentation. Features include real-time messaging, conversation history, error/loading states, and secure API key handling.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,24 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+mati/.env
+mati/.env.local
+XD/.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
