Switch backend from OpenAI to Groq and add gTTS TTS
Replaced OpenAI API integration with Groq for chat completions and updated environment variables accordingly. Removed OpenAI TTS and implemented free TTS using gTTS. Refactored endpoints to use new Groq and gTTS logic, improved error handling, and simplified OCR integration.

--- a/mati/.env
+++ b/mati/.env
@@ -1,1 +1,5 @@
-OPENAI_API_KEY=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
+# Usuń lub zakomentuj stary klucz
+# OPENAI_API_KEY="sk-..."
+
+# Dodaj nowy klucz
+GROQ_API_KEY="gsk_xxxxxxxxxxxxxxxxxxxxxxxxxx"
