Remove GROQ_API_KEY value from .env
Cleared the GROQ_API_KEY value in the .env file for security or configuration purposes.

--- a/mati/.env
+++ b/mati/.env
@@ -2,4 +2,4 @@
 # OPENAI_API_KEY="sk-..."
 
 # Dodaj nowy klucz
-GROQ_API_KEY="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"
+GROQ_API_KEY=""
