Improve OCR workflow and image chat support
Enhanced OCR endpoint in Flask backend with better Tesseract configuration, preprocessing, and diagnostics. Frontend now supports image upload with preview and displays OCR results in chat. Microphone input is disabled and user feedback is provided. Added requirements.txt for backend dependencies.

--- a/mati/.env
+++ b/mati/.env
@@ -1,5 +1,9 @@
+# Environment variables for the mati Flask app
+# Set the full path to your tesseract.exe if it is not on the system PATH.
+# Example Windows path (adjust if your Tesseract is installed elsewhere):
+TESSERACT_CMD="C:\\Program Files\\Tesseract-OCR\\tesseract.exe"
 # Usuń lub zakomentuj stary klucz
 # OPENAI_API_KEY="sk-..."
 
 # Dodaj nowy klucz
-GROQ_API_KEY=""
+GROQ_API_KEY="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"
